# tauri-wasm

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.js
example/: package.json  pnpm-lock.yaml  rsw.toml  vite.config.ts
example/.rsw/: rsw.crates  rsw.err  rsw.info
example/src/: App.tsx
example/src-tauri/capabilities/: default.json
example/src-wasm/window/: Cargo.toml
example/src-wasm/window/src/: lib.rs
src/: js.rs  lib.rs
src/api/: app.rs  window.rs
src/scripts/api/: window.js
src/scripts/plugins/: biometric.js  fs.js  http.js
